[gd_scene load_steps=10 format=3 uid="uid://c7b2hquiphaap"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_lohf0"]
[ext_resource type="Script" path="res://Scripts/bullets.gd" id="1_xgamk"]
[ext_resource type="Script" path="res://Scripts/gifts.gd" id="2_nemx7"]
[ext_resource type="PackedScene" uid="uid://p18f3fkiwmmv" path="res://Scenes/leaderboard.tscn" id="4_k0mko"]

[sub_resource type="LabelSettings" id="LabelSettings_xwqsf"]
font_size = 120
font_color = Color(1, 1, 1, 0.321569)

[sub_resource type="SystemFont" id="SystemFont_gdc0l"]

[sub_resource type="LabelSettings" id="LabelSettings_uq7el"]
font = SubResource("SystemFont_gdc0l")
font_size = 42
font_color = Color(0.620017, 0.0814226, 0.088727, 1)

[sub_resource type="SystemFont" id="SystemFont_hw507"]

[sub_resource type="Theme" id="Theme_ig4op"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_outline_color = Color(1, 1, 1, 1)
Button/constants/outline_size = 12
Button/font_sizes/font_size = 100
Button/fonts/font = SubResource("SystemFont_hw507")

[node name="Main" type="Node2D"]
script = ExtResource("1_lohf0")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 424.0
offset_bottom = 942.0
color = Color(0.306923, 0.306923, 0.306923, 1)

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0, 0, 0, 1)

[node name="Score" type="Label" parent="."]
offset_right = 424.0
offset_bottom = 937.0
label_settings = SubResource("LabelSettings_xwqsf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GAMEOVER" type="Label" parent="."]
visible = false
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = 150.5
offset_right = 424.0
offset_bottom = 211.5
grow_vertical = 2
size_flags_horizontal = 4
text = "GAME OVER !"
label_settings = SubResource("LabelSettings_uq7el")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GAMEOVER_BUTTON" type="Button" parent="."]
visible = false
offset_top = 592.0
offset_right = 424.0
offset_bottom = 757.0
theme = SubResource("Theme_ig4op")
action_mode = 0
shortcut_feedback = false
shortcut_in_tooltip = false
text = "RETRY"
icon_alignment = 1

[node name="Leaderboard" parent="." instance=ExtResource("4_k0mko")]
visible = false
offset_left = 8.0
offset_top = 243.0
offset_right = 414.0
offset_bottom = 575.0

[node name="gifts" type="Node2D" parent="."]
script = ExtResource("2_nemx7")

[node name="bullets" type="Node2D" parent="."]
script = ExtResource("1_xgamk")

[node name="left" type="Button" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 791.0
offset_right = 50.0
offset_bottom = 822.0
grow_vertical = 2
scale = Vector2(2, 2)
text = "<"

[node name="right" type="Button" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 344.0
offset_top = 791.0
offset_right = 374.0
offset_bottom = 822.0
grow_vertical = 2
scale = Vector2(2, 2)
text = ">"

[connection signal="button_down" from="GAMEOVER_BUTTON" to="." method="_on_gameover_button_button_down"]
[connection signal="pressed" from="GAMEOVER_BUTTON" to="." method="_on_gameover_button_pressed"]
[connection signal="button_down" from="left" to="." method="_on_left_button_down"]
[connection signal="button_up" from="left" to="." method="_on_left_button_up"]
[connection signal="button_down" from="right" to="." method="_on_right_button_down"]
[connection signal="button_up" from="right" to="." method="_on_right_button_up"]
